--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "@material-tailwind/react": "0.3.4",
     "@next-auth/firebase-adapter": "^0.1.2",
     "draft-js": "^0.11.7",
-    "firebase": "^8.7.0",
+    "firebase": "^8.10.0",
     "next": "latest",
     "next-auth": "^3.27.2",
     "nextjs-progressbar": "^0.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
-    "react-firebase-hooks": "^3.0.4"
+    "react-firebase-hooks": "^3.0.4",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
